--- a/estilo.css
+++ b/estilo.css
@@ -1,2 +1,9 @@
-h1{font: size 30px; blueviolet;}
-
+<style>
+        h1{color: red;font-size: x-large;"}
+        p{
+            color: red;
+            font-family: Arial, Helvetica, sans-serif;}
+        img{
+            border: 100px; solid red;}
+    
+    </style>
